--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.2.0",
     "clsx": "^2.1.0",
+    "intro.js-react": "^1.0.0",
     "lucide-react": "^0.372.0",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
